--- a/app/views/errors/500.html.erb
+++ b/app/views/errors/500.html.erb
@@ -1,4 +1,17 @@
-<h1>Wrong</h1>
-<h1><%= @user.email %></h1>
-<%= session[:test]%>
-<%=flash[:notice]%>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" >
+  <title>if kpi</title>
+</head>
+<body style="margin:0;background:url('/assets/background.png') repeat center center">
+<div style="margin-top:60px;background:white;padding:0px 0px 20px">
+  <div style="width:361px;margin:0 auto">
+    <h1 style="color:#5496c2;;display:inline-block;font-size:80px;position:relative;top:-82px;margin-bottom:0px;">4</h1>
+    <img src="/assets/404.png"/>
+    <h1 style="color:#5496c2;;display:inline-block;font-size:80px;position:relative;top:-82px;margin-bottom:0px;">4</h1>
+  </div>
+  <p style="color:#e67e22;font-weight:bold;margin-top:-20px;margin-bottom:0;display:block;font-size:21px;;text-align:center"><%=flash[:notice]%></p>
+</div>
+</body>
+</html>
