--- a/app/views/kpis/_new.html.erb
+++ b/app/views/kpis/_new.html.erb
@@ -47,13 +47,16 @@
                     <input type="checkbox" class="is-calcu-check" id="is-calcu-check" onclick="is_calcu()"/>
                     <div class="is-calcu-type clearfix" id="is-calcu-type" style="display:none">
                          <%= select_tag :frequency,options_from_collection_for_select(@base_kpis,'id','name'),{:id=>'is-calcu-relate',:onchange=>'select_calcuRelate()',:prompt=>''}%>
+                         <div  class="clearfix wrap-calcuType-method-btn">
                          <a class="pull-left btn btn-primary calcuType-method-btn" sign="+" data-calcuType="1" onclick="select_calcuMethod(event)">+</a>
                          <a class="pull-left btn btn-primary calcuType-method-btn" sign="-" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
                          <a class="pull-left btn btn-primary calcuType-method-btn" sign="*" data-calcuType="3" onclick="select_calcuMethod(event)">x</a>
                          <a class="pull-left btn btn-primary calcuType-method-btn" sign="/" data-calcuType="4" onclick="select_calcuMethod(event)">/</a>
-
+                         <a class="pull-left btn btn-primary calcuType-method-btn" sign="[" data-calcuType="5" onclick="select_calcuMethod(event)">[</a>
+                         <a class="pull-left btn btn-primary calcuType-method-btn" sign="]" data-calcuType="6" onclick="select_calcuMethod(event)">]</a>
+                         </div>
                          <input type="text" class="calcuType-input" id="calcuType-input" onkeyup="calcuInput(event)"/>
-                         <a class="btn calcuType-clear" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
+                         <a class="btn calcuType-clear pull-left" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
                          <div style="display:none" id="takeCal" cal></div>
                     </div></td>
                </tr>
