--- a/app/assets/stylesheets/epm_base.css
+++ b/app/assets/stylesheets/epm_base.css
@@ -9,24 +9,15 @@ header{
     background-color:#f2f2f2;
 }
 .user-portrait-background{
-    background-color:rgba(69,188,210,0.8);
+    background:-moz-radial-gradient(rgba(69,159,210,0.5),rgba(69,159,210,0.8));
     position:relative;
     height:100%;
     width:150px;
 }
-.user-portrait-brand>p{
-    font-family:"Tekton Pro";
-    text-align:center;
-    color:white;
-    font-size:18px;
-    position:absolute;
-    top:35px;
-    left:0;
-    right:0
-}
-.user-portrait-brand>p:nth-of-type(2){
-    font-size:40px;
-    top:65px;
+.user-portrait-brand{
+    background:url("../images/logo.png") no-repeat center center;
+    width:150px;
+    height:150px;
 }
 nav ul{
     list-style: none;
