--- a/app/assets/stylesheets/epm_base.css
+++ b/app/assets/stylesheets/epm_base.css
@@ -15,23 +15,78 @@ header{
     width:150px;
 }
 .user-portrait-brand{
-    background:url("../images/logo.png") no-repeat center center;
+    background:url("../images/logo.png") no-repeat center bottom;
     width:150px;
-    height:150px;
+    height:100px;
+}
+.user-portrait-name{
+    color:white;
+    font-family:"tekton pro";
+    padding-left:40px;
+    font-size:18px;
+    margin-top:5px;
 }
 nav ul{
     list-style: none;
     display:inline-block;
     margin:0;
-
+    padding-left:5px;
 }
 nav ul li{
     float:left;
 }
 nav ul li a{
     display:block;
-    width:150px;
+    width:140px;
     color:#959595;
     font-weight:400;
     font-size:17px;
+    height:150px;
+    text-align:center;
+    cursor:pointer;
+}
+nav ul li a:hover{
+    color:#f5a133;
+}
+nav ul li a span:nth-of-type(1){
+    display:block;
+    margin-top:30px;
+    margin-bottom:10px;
+}
+nav ul li a span:nth-of-type(2){
+    display:block;
+    width:100%;
+    height:52px;
+    background-image:url("../images/nav-btn.png");
+    background-repeat:no-repeat;
+}
+.nav-get-started{
+    background-position:center 0px;
+}
+nav ul li a:hover .nav-get-started{
+    background-position:center -50px;
+}
+.nav-dash-board{
+    background-position:center -100px;
+}
+nav ul li a:hover .nav-dash-board{
+    background-position:center -148px;
+}
+.nav-analytics{
+    background-position:center -195px;
+}
+nav ul li a:hover .nav-analytics{
+    background-position:center -238px;
+}
+.nav-report{
+    background-position:center -299px;
+}
+nav ul li a:hover .nav-report{
+    background-position:center -353px;
+}
+.nav-entry-kpi{
+    background-position:center -413px;
+}
+nav ul li a:hover .nav-entry-kpi{
+    background-position:center -466px;
 }
