--- a/app/assets/stylesheets/Analytic-chosen.css
+++ b/app/assets/stylesheets/Analytic-chosen.css
@@ -40,7 +40,7 @@
   padding: 0 0 0 8px;
   height: 23px;
   border: 1px solid #aaa;
-  border-radius: 5px;
+  border-radius: 1px;
   background-color: #fff;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #ffffff), color-stop(50%, #f6f6f6), color-stop(52%, #eeeeee), color-stop(100%, #f4f4f4));
   background: -webkit-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
@@ -84,6 +84,8 @@
   background-position: -42px -10px;
 }
 .chosen-container-single .chosen-single div {
+  background: -moz-linear-gradient(center bottom , #CCCCCC 0%, #EEEEEE 60%) repeat scroll 0 0 #CCCCCC;
+  border-left: 1px solid #AAAAAA;
   position: absolute;
   top: 0;
   right: 0;
@@ -95,7 +97,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 0px 2px;
+  background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 3px;
 }
 .chosen-container-single .chosen-search {
   position: relative;
@@ -318,7 +320,7 @@
   background: transparent;
 }
 .chosen-container-active.chosen-with-drop .chosen-single div b {
-  background-position: -18px 2px;
+  background-position: -15px 3px;
 }
 .chosen-container-active .chosen-choices {
   border: 1px solid #5897fb;
