--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -1,12 +1,19 @@
 /*************************************************************  font color
 *********************************************************************************************************/
 .normal-blue{
-    color:#5496c2
+    color:#5fa9da
 }
 /*************************************************************  font format
 *********************************************************************************************************/
 p{
     margin:0 0 8px;
+}
+h2{
+    font-family:"Arial";
+    font-weight:bold;
+    font-size:30px;
+    padding:30px 0;
+    margin:0;
 }
 /*************************************************************  input\select format
 *********************************************************************************************************/
@@ -44,6 +51,15 @@ a:hover,a:focus{
 .pull-right{
     float:right;
 }
+.relative{
+    position:relative;
+}
+.absolute{
+    position:absolute;
+}
+.fixed{
+    position:fixed;
+}
 .clearfix:before, .clearfix:after {
     content: "";
     display: table;
@@ -63,40 +79,44 @@ a:hover,a:focus{
 /*************************************************************  button style
 *********************************************************************************************************/
 .btn{
-    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.35);
-    border: 2px solid rgba(255, 255, 255, 0.4);
-    border-radius: 5px 5px 5px 5px;
-    color: #FFFFFF;
-    display: inline-block;
-    font-size: 14px;
-    font-weight: 500;
-    padding: 9px 22px 7px;
-    text-decoration: none;
-    transition: background-color 0.35s ease 0s;
+    display:block;
+    text-align:center;
+    background:#ddd;
+    transition: background-color 0.25s ease 0s;
+    -moz-transition: background-color 0.25s ease 0s;
+    -webkit-transition: background-color 0.25s ease 0s;
     cursor:pointer;
+    padding:8px 0;
+    margin:0 20px;
 }
 .btn:hover{
-    background:transparent;
+
+}
+.btn.btn-danger{
+    background:#f75460;
+    color:white;
+}
+.btn.btn-danger:hover{
+    background:#f56969;
 }
 .btn.btn-primary{
-    background: none repeat scroll 0 0 rgba(57, 139, 194, 0.45);
-    border: 2px solid rgba(57, 139, 194, 0.4);
+    background:#4195eb;
+    color:white;
 }
 .btn.btn-primary:hover{
-    background: none repeat scroll 0 0 rgba(57, 139, 194, 0.1);
-    color:#398bc2;
+    background:#69aef5
 }
 .btn.btn-success{
-    background: none repeat scroll 0 0 rgba(56, 194, 109, 0.65);
-    border: 2px solid rgba(56, 194, 109, 0.4);
+    background:#41eb79;
+    color:white;
 }
 .btn.btn-success:hover{
-    background: none repeat scroll 0 0 rgba(56, 194, 109, 0.1);
-    color:#38c26d;
+    background:#69f59e
 }
-.btn.btn-block{
-    padding:7px 70px;
-    display:table !important;
-    margin:0 auto;
-    font-size:16px;
+.btn.btn-warning{
+    background:#eb9541;
+    color:white;
+}
+.btn.btn-warning:hover{
+    background:#f6af6a
 }
