--- a/app/assets/stylesheets/Analytic-chosen.css
+++ b/app/assets/stylesheets/Analytic-chosen.css
@@ -37,10 +37,10 @@
   position: relative;
   display: block;
   overflow: hidden;
-  padding: 0 0 0 8px;
+  padding:2px 5px;
   height: 23px;
-  border: 1px solid #aaa;
-  border-radius: 1px;
+  border: 1px solid #c8c8c8;
+  border-radius: 4px;
   background-color: #fff;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #ffffff), color-stop(50%, #f6f6f6), color-stop(52%, #eeeeee), color-stop(100%, #f4f4f4));
   background: -webkit-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
@@ -53,6 +53,7 @@
   text-decoration: none;
   white-space: nowrap;
   line-height: 24px;
+  font-size:13px;
 }
 .chosen-container-single .chosen-default {
   color: #999;
@@ -84,7 +85,7 @@
   background-position: -42px -10px;
 }
 .chosen-container-single .chosen-single div {
-  background: -moz-linear-gradient(center bottom , #CCCCCC 0%, #EEEEEE 60%) repeat scroll 0 0 #CCCCCC;
+  background:#eaedec;
   border-left: 1px solid #AAAAAA;
   position: absolute;
   top: 0;
@@ -97,7 +98,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 3px;
+  background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 5px;
 }
 .chosen-container-single .chosen-search {
   position: relative;
