--- a/app/assets/stylesheets/epm_base.css
+++ b/app/assets/stylesheets/epm_base.css
@@ -7,6 +7,11 @@
     url('OpenSans-Regular.ttf') format('truetype'),
     url('OpenSans-Regular.svg#OpenSans-Regular') format('svg');
 }
+@font-face {
+    font-family:"helve";
+    src:url("font/helveticaneueultralight.ttf"),
+    url("font/helveticaneueultralight.eot.eot");
+}
 html{
     height:100%;
 }
@@ -88,6 +93,7 @@ nav ul{
 }
 nav>ul>li{
     float:left;
+    line-height:21px;
 }
 nav>ul>li>a{
     display:block;
