--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -3,17 +3,18 @@
 .normal-blue{
     color:#5fa9da
 }
+
 /*************************************************************  font format
 *********************************************************************************************************/
 p{
     margin:0 0 8px;
 }
 h2{
-    font-family:"Arial";
-    font-weight:bold;
-    font-size:30px;
+    font-family:"helve";
+    font-size:33px;
     padding:30px 0;
     margin:0;
+    letter-spacing:1px
 }
 /*************************************************************  input\select format
 *********************************************************************************************************/
@@ -22,9 +23,19 @@ input[type="text"],input[type="password"]{
     padding:8px 5px;
     font-size:14px;
     color:#555;
-    font-weight:500;
+    font-weight:lighter;
     border-radius:4px;
     border:1px solid #ddd;
+}
+input[type="date"]{
+    width:120px;
+    padding:7px 5px;
+    font-size:14px;
+    color:#555;
+    font-weight:lighter;
+    border-radius:4px;
+    border:1px solid #c8c8c8;
+    margin:0;
 }
 /*************************************************************  basic detail
 *********************************************************************************************************/
@@ -88,10 +99,16 @@ a:hover,a:focus{
     cursor:pointer;
     padding:8px 0;
     margin:0 20px;
+    text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25);
+    border:none;
+    border-radius:2px;
+    vertical-align:middle;
 }
 .btn:hover{
 
 }
+/************************************** button color
+********************************************************/
 .btn.btn-danger{
     background:#f75460;
     color:white;
@@ -119,4 +136,10 @@ a:hover,a:focus{
 }
 .btn.btn-warning:hover{
     background:#f6af6a
+}
+/************************************** button size
+********************************************************/
+.btn.btn-normal{
+    display:inline-block;
+    padding:7px 16px
 }
