--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -3,7 +3,9 @@
 .normal-blue{
     color:#5fa9da
 }
-
+.normal-gray{
+    color:#777;
+}
 /*************************************************************  font format
 *********************************************************************************************************/
 p{
@@ -41,6 +43,12 @@ input[type="date"]{
 *********************************************************************************************************/
 a:hover,a:focus{
     text-decoration:none ;
+}
+label{
+    cursor:default;
+}
+.pointer{
+    cursor:pointer
 }
 /*************************************************************  position format
 *********************************************************************************************************/
