--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -125,7 +125,7 @@ label{
     background:#f56969;
 }
 .btn.btn-primary{
-    background:#4195eb;
+    background:#5fa9da;
     color:white;
 }
 .btn.btn-primary:hover{
