--- a/app/assets/stylesheets/Analytic-chosen.css
+++ b/app/assets/stylesheets/Analytic-chosen.css
@@ -166,12 +166,12 @@
   cursor: default;
 }
 .chosen-container .chosen-results li.highlighted {
-  background-color: #3875d7;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #3875d7), color-stop(90%, #2a62bc));
-  background-image: -webkit-linear-gradient(#3875d7 20%, #2a62bc 90%);
-  background-image: -moz-linear-gradient(#3875d7 20%, #2a62bc 90%);
-  background-image: -o-linear-gradient(#3875d7 20%, #2a62bc 90%);
-  background-image: linear-gradient(#3875d7 20%, #2a62bc 90%);
+  background-color: #5fa9da;
+  /*background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(20%, #3875d7), color-stop(90%, #2a62bc));*/
+  /*background-image: -webkit-linear-gradient(#3875d7 20%, #2a62bc 90%);*/
+  /*background-image: -moz-linear-gradient(#3875d7 20%, #2a62bc 90%);*/
+  /*background-image: -o-linear-gradient(#3875d7 20%, #2a62bc 90%);*/
+  /*background-image: linear-gradient(#3875d7 20%, #2a62bc 90%);*/
   color: #fff;
 }
 .chosen-container .chosen-results li.no-results {
