--- a/app/assets/stylesheets/datepicker.css
+++ b/app/assets/stylesheets/datepicker.css
@@ -132,12 +132,12 @@
 .datepicker table tr td.today.disabled,
 .datepicker table tr td.today.disabled:hover {
   background-color: #fde19a;
-  background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));
-  background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: linear-gradient(top, #fdd49a, #fdf59a);
+  /*background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));*/
+  /*background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: linear-gradient(top, #fdd49a, #fdf59a);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdd49a', endColorstr='#fdf59a', GradientType=0);
   border-color: #fdf59a #fdf59a #fbed50;
@@ -300,12 +300,12 @@
 .datepicker table tr td.active.disabled,
 .datepicker table tr td.active.disabled:hover {
   background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(top, #0088cc, #0044cc);
+  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
+  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -334,7 +334,7 @@
 .datepicker table tr td.active:hover[disabled],
 .datepicker table tr td.active.disabled[disabled],
 .datepicker table tr td.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #5fa9da;
 }
 .datepicker table tr td.active:active,
 .datepicker table tr td.active:hover:active,
@@ -344,7 +344,7 @@
 .datepicker table tr td.active:hover.active,
 .datepicker table tr td.active.disabled.active,
 .datepicker table tr td.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #5fa9da \9;
 }
 .datepicker table tr td span {
   display: block;
@@ -371,13 +371,13 @@
 .datepicker table tr td span.active:hover,
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(top, #0088cc, #0044cc);
+  background-color: #5fa9da;
+  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
+  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -406,7 +406,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #5fa9da;
 }
 .datepicker table tr td span.active:active,
 .datepicker table tr td span.active:hover:active,
