--- a/app/assets/stylesheets/datetimepicker.css
+++ b/app/assets/stylesheets/datetimepicker.css
@@ -160,12 +160,12 @@
 .datetimepicker table tr td.today.disabled,
 .datetimepicker table tr td.today.disabled:hover {
   background-color: #fde19a;
-  background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));
-  background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: linear-gradient(top, #fdd49a, #fdf59a);
+  /*background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));*/
+  /*background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: linear-gradient(top, #fdd49a, #fdf59a);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdd49a', endColorstr='#fdf59a', GradientType=0);
   border-color: #fdf59a #fdf59a #fbed50;
@@ -208,13 +208,13 @@
 .datetimepicker table tr td.active:hover,
 .datetimepicker table tr td.active.disabled,
 .datetimepicker table tr td.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(top, #0088cc, #0044cc);
+  /*background-color: #006dcc;*/
+  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
+  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -243,7 +243,7 @@
 .datetimepicker table tr td.active:hover[disabled],
 .datetimepicker table tr td.active.disabled[disabled],
 .datetimepicker table tr td.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #5fa9da;
 }
 .datetimepicker table tr td.active:active,
 .datetimepicker table tr td.active:hover:active,
@@ -253,7 +253,7 @@
 .datetimepicker table tr td.active:hover.active,
 .datetimepicker table tr td.active.disabled.active,
 .datetimepicker table tr td.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #5fa9da \9;
 }
 .datetimepicker table tr td span {
   display: block;
@@ -297,13 +297,13 @@
 .datetimepicker table tr td span.active:hover,
 .datetimepicker table tr td span.active.disabled,
 .datetimepicker table tr td span.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(top, #0088cc, #0044cc);
+  /*background-color: #006dcc;*/
+  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
+  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -332,7 +332,7 @@
 .datetimepicker table tr td span.active:hover[disabled],
 .datetimepicker table tr td span.active.disabled[disabled],
 .datetimepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #5fa9da;
 }
 .datetimepicker table tr td span.active:active,
 .datetimepicker table tr td span.active:hover:active,
@@ -342,7 +342,7 @@
 .datetimepicker table tr td span.active:hover.active,
 .datetimepicker table tr td span.active.disabled.active,
 .datetimepicker table tr td span.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #5fa9da \9;
 }
 .datetimepicker table tr td span.old {
   color: #999999;
