--- a/app/assets/stylesheets/Analytic-main.css
+++ b/app/assets/stylesheets/Analytic-main.css
@@ -1,85 +1,141 @@
 /*************************************************************************************     Anaytics
 ************************************************************************************************************************/
-.analytics-mark{
-    width:150px;
-    height:100%
+.analytics-mark {
+    width: 150px;
+    height: 100%
 }
+
 /************************************************************************** condition part
 ****************************************************************************************/
-.analytics-condition{
-    height:100px;
-    background-color:rgba(221,221,221,0.13);
-    border-top:1px solid rgba(221,221,221,0.5)
+.analytics-condition {
+    height: 110px;
+    background-color: rgba(221, 221, 221, 0.13);
+    border-top: 1px solid rgba(221, 221, 221, 0.5);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 135px;
+    transition: top 0.35s ease-out;
 }
-.index-condition-group{
-    width:250px;
-    float:left;
+
+.index-condition-group {
+    width: 250px;
+    float: left;
 }
-.index-condition-group:nth-of-type(2){
-    width:260px;
+
+.index-condition-group:nth-of-type(2) {
+    width: 260px;
 }
+
+.analytic-control-condition-visible {
+    position: absolute;
+    bottom: 5px;
+    left: 50%;
+    opacity: 0.5;
+    cursor: pointer;
+    transition: opacity 0.25s ease-out;
+}
+
+.analytic-control-condition-visible:hover {
+    opacity: 0.9;
+}
+
+.analytics-condition-invisible-mark {
+    position: absolute;
+    bottom: 0px;
+    margin: 0px;
+    left: 40px;
+    color: #5fa9da;
+}
+
 /************************************************* select
 ********************************************************************/
 .analytics-condition-choose {
-    padding:18px 0px 5px 31px;
+    padding: 18px 0px 5px 31px;
 }
-.chosen-container-single .chosen-single{
-    background:none;
+
+.chosen-container-single .chosen-single {
+    background: none;
 }
-div[title='analy-entity-select']{
-    float:left;
+
+div[title='analy-entity-select'] {
+    float: left;
 }
-div[title='analy-kpi-select']{
-    float:right;
- }
-div[title='analy-view-select']{
-    float:right;
-    margin-top:8px;
+
+div[title='analy-kpi-select'] {
+    float: right;
 }
+
+div[title='analy-view-select'] {
+    float: right;
+    margin-top: 8px;
+}
+
 /************************************************* date input
 ********************************************************************/
-.index-pick-date[type="text"]{
-    padding:4px 5px;
-    background-color:white;
-    width:150px !important;
-    margin-left:42px;
-    font-size:13px;
-    cursor:default;
-    margin-bottom:0px;
+.index-pick-date[type="text"] {
+    padding: 4px 5px;
+    background-color: white;
+    width: 150px !important;
+    margin-left: 42px;
+    font-size: 13px;
+    cursor: default;
+    margin-bottom: 0px;
+    font-family: 'open-sans'
 }
-.index-pick-date[type="text"]:nth-of-type(2){
-    margin-top:6px;
+
+.index-pick-date[type="text"]:nth-of-type(2) {
+    margin-top: 6px;
 }
-.week-tr-highlight{
-    background-color:#eee;
+
+.week-tr-highlight {
+    background-color: #eee;
 }
-tr.week-tr-active{
-    background-color:#5fa9da;
+
+tr.week-tr-active {
+    background-color: #5fa9da;
     /*background: linear-gradient(center top , #0088CC, #0044CC);*/
     /*background: -moz-linear-gradient(center top , #0088CC, #0044CC);*/
     /*background: -webkit-linear-gradient(top , #0088CC, #0044CC);*/
-    color:white;
+    color: white;
 }
-tr.week-tr-active>td{
-    border-radius:0;
-    -webkit-border-radius:0;
+
+tr.week-tr-active>td {
+    border-radius: 0;
+    -webkit-border-radius: 0;
 }
-.datepicker table tr.week-tr-active td.day:hover{
-    background:none;
+
+.datepicker table tr.week-tr-active td.day:hover {
+    background: none;
 }
-.index-date-extra-info{
-    display:inline-block;
-    color:#888;
-    margin:0;
-    vertical-align:middle;
-    font-size:12px;
-    width:42px;
-    text-align:center;
-    line-height:14px;
+
+.index-date-extra-info {
+    display: inline-block;
+    color: #888;
+    margin: 0;
+    vertical-align: middle;
+    font-size: 12px;
+    width: 42px;
+    text-align: center;
+    line-height: 14px;
 }
+
 /************************************************* radio input
 ********************************************************************/
-.analy-radio{
-    margin-top:7px;
-    font-size:13px;
+.analy-radio {
+    margin-top: 7px;
+    font-size: 13px;
+}
+
+/************************************************************************** chart body
+****************************************************************************************/
+.chart-body {
+    padding-top:20px;
+    position: relative;
+    top: 110px;
+    transition: top 0.35s ease-out;
+    width: 100%;
+    height:700px;
+    border-top: 1px dotted #ddd;
+    border-bottom: 1px dotted #ddd;
 }
