--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -44,7 +44,7 @@ input[type="date"]{
 a:hover,a:focus{
     text-decoration:none ;
 }
-label{
+label,p,h1,h2,h3,h4,h5{
     cursor:default;
 }
 .pointer{
