--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -95,6 +95,12 @@ label,p,h1,h2,h3,h4,h5{
     display:table;
     margin:0 auto;
 }
+.hidden-x{
+    overflow-x:hidden;
+}
+.hidden-y{
+    overflow-y:hidden;
+}
 /*************************************************************  button style
 *********************************************************************************************************/
 .btn{
