--- a/app/assets/stylesheets/Analytic-main.css
+++ b/app/assets/stylesheets/Analytic-main.css
@@ -153,7 +153,7 @@ div[title='analy-view-select'] {
     line-height:27px;
 }
 
-.control-chart-interval-group>li>a.active {
+.control-chart-interval-group>li.active>a {
     color: rgba(0, 0, 0, 0.7);
 }
 
