--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -55,6 +55,9 @@ label,p,h1,h2,h3,h4,h5{
 .text-center{
     text-align:center;
 }
+.hide{
+    display:none
+}
 .inline{
     display:inline;
 }
@@ -79,6 +82,8 @@ label,p,h1,h2,h3,h4,h5{
 .fixed{
     position:fixed;
 }
+
+
 .clearfix:before, .clearfix:after {
     content: "";
     display: table;
