--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -162,3 +162,41 @@ label,p,h1,h2,h3,h4,h5{
     display:inline-block;
     padding:7px 16px
 }
+/********************************************************************************************************* Message
+*******************************************************************************************************************/
+.message-box{
+    position:fixed;
+    z-index:100;
+    width:600px;
+    margin-left:-300px;
+    word-break:break-all;
+    word-wrap:break-word;
+    left:50%;
+    padding:15px 10px 8px;
+    text-align:center;
+    display:none;
+    word-break:break-all;
+    word-wrap:break-word;
+}
+.message-box p{
+    font-size:16px;
+    text-shadow:1px 1px 1px rgba(0,0,0,0.5);
+}
+.message-box.top{
+    top:0;
+}
+.message-box.bottom{
+    bottom:0;
+}
+.message-box.success{
+    background:#45d263;
+    color:white;
+}
+.message-box.danger{
+    background-color:#fa4545;
+    color:white
+}
+.message-box.warning{
+    color:white;
+    background-color:#f3ca39;
+}
