--- a/app/views/shares/_message_box.html
+++ b/app/views/shares/_message_box.html
@@ -1,3 +1,3 @@
-<div class="message-box" id="MessageBox" style="display:none">
-    <p class="text-center"></p>
+<div class="message-box" id="MessageBox">
+    <p></p>
 </div>
