--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -1,12 +1,159 @@
-<div class="sub-middle">
-     <!--<div class="sub-middle-tool pull-right">-->
-     <!--<a data-placement="bottom" data-animation=false id="tool-print" title="print this page"><i class="icon-print"></i> 打印</a>-->
-     <!--<a data-placement="bottom" data-animation=false id="tool-excel" title="export to Excel"><i class="icon-share-alt"></i>Excel</a>-->
-     <!--<a data-placement="bottom" data-animation=false id="tool-pdf" title="export to PDF"><i class="icon-share-alt"></i>PDF</a>-->
-     <!--</div>-->
+<div>
+        <div class="analytics-condition clearfix" id="analytics-condition">
+            <div class="analytics-mark pull-left">
+                <h2 class="normal-blue text-center pointer" onclick="analytic_control_condition_visible()">
+                    Analytics</h2>
+            </div>
+            <div class="pull-left analytics-condition-choose">
+                <div class="index-condition-group">
+                    <select data-placeholder="Entity *" style="width:90px;" class="chosen-select"
+                            title="analy-entity-select" id="chart-group">
+                        <option value=""></option>
+                        <option value="group1">entity1</option>
+                        <option value="group2">entity2</option>
+                        <option value="group3">entity3</option>
+                    </select>
+                    <select data-placeholder="Kpi *" style="width:150px;" class="chosen-select" title="analy-kpi-select"
+                            id="chart-kpi" date-pick=false>
+                        <option value=""></option>
+                        <option value="kpi1" interval="200" type="">week</option>
+                        <option value="kpi1" interval="90">hour</option>
+                        <option value="kpi1" interval="100">day</option>
+                        <option value="kpi2" interval="400">quarter</option>
+                        <option value="kpi3" interval="300">month</option>
+                        <option value="kpi3" interval="500">year</option>
+                        <option value="kpi3" interval="">empty</option>
+                    </select>
+                    <select data-placeholder="View *" style="width:150px;" class="chosen-select" title="analy-view-select"
+                            id="chart-view">
+                        <option value=""></option>
+                        <option value="entity1">view1</option>
+                        <option value="entity2">view2</option>
+                        <option value="entity3">view3</option>
+                    </select>
+                </div>
+                <div class="index-condition-group">
+                    <input type="text" class="index-pick-date" placeholder="Begin Time *" id="analy-begin-time"
+                           readonly=true/>
+                    <label class="index-date-extra-info"></label>
+                    <input type="text" class="index-pick-date" placeholder="End Time" id="analy-end-time"
+                           readonly=true/>
+                    <label class="index-date-extra-info"></label>
+                </div>
+                <div class="index-condition-group" style="width:120px">
+                    <label class="radio analy-radio">
+                        <input type="radio" name="chartRadios" value="1" checked>
+                        Summary
+                    </label>
+                    <label class="radio analy-radio">
+                        <input type="radio" name="chartRadios" value="2">
+                        Average
+                    </label>
+                </div>
+                <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px" onclick="prepare_form_chart()">add
+                    chart</a>
+            </div>
+            <i class="icon-chevron-up analytic-control-condition-visible" id="analytic-control-condition-visible"
+               open=true onclick="analytic_control_condition_visible()"> </i>
+
+            <p class="analytics-condition-invisible-mark pointer" id="analytics-condition-invisible-mark"
+               style="display:none" onclick="analytic_control_condition_visible()">Analytics</p>
+        </div>
+        <div class="chart-body" id="chart-body" style="display:none">
+            <div class="clearfix" id="chart-interval-alternate" my_height="28">
+                <ul class="pull-right control-chart-interval-group">
+                    <li interval="90"><a>Hr</a></li>
+                    <li interval="100"><a>D</a></li>
+                    <li interval="200"><a>W</a></li>
+                    <li interval="300"><a>M</a></li>
+                    <li interval="400"><a>Qr</a></li>
+                    <li interval="500"><a>Y</a></li>
+                </ul>
+            </div>
+            <div class="relative" id="chart-main-middle">
+                <div class="chart-container " id="chart-container"></div>
+                <div id="chart-point-detail" class="chart-point-detail">
+                    <table class="chart-detail-table">
+                        <thead>
+                            <tr>
+                                <td colspan="2" align="center" id="chart-detail-kpi" ></td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td width="80px"  align="right">Date:</td>
+                                <td id="chart-detail-date" align="left"></td>
+                            </tr>
+                            <tr class="hide">
+                                <td width="80px"  align="right">To:</td>
+                                <td id="chart-detail-end-date" align="left"></td>
+                            </tr>
+                            <tr class="hide">
+                                <td width="80px"  align="right">Percent:</td>
+                                <td id="chart-detail-percent" align="left"></td>
+                            </tr>
+                            <tr>
+                                <td width="80px"  align="right">Target:</td>
+                                <td id="chart-detail-target" align="left"></td>
+                            </tr>
+                            <tr class="hide">
+                                <td width="80px"  align="right">Aver Target:</td>
+                                <td id="chart-detail-aver-target" align="left"></td>
+                            </tr>
+                            <tr>
+                                <td width="80px"  align="right">Value:</td>
+                                <td id="chart-detail-value" align="left"></td>
+                            </tr>
+
+                            <tr class="hide">
+                                <td width="80px"  align="right">Aver Value</td>
+                                <td id="chart-detail-aver-date" align="left"></td>
+                            </tr>
+                            <tr>
+                                <td width="80px"  align="right">TCR:</td>
+                                <td id="chart-detail-tcr" align="left"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="chart-detail-close" id="chart-detail-close" onclick="close_chart_detail()">Close</div>
+                </div>
+            </div>
+            <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
+                <tr>
+                    <td class="analytics-chart-line" type="line">
+                        <p style="display:none">Line</p>
+                    </td>
+                    <td class="analytics-chart-column" type="column">
+                        <p>Column</p>
+                    </td>
+                    <td class="analytics-chart-pie" type="pie">
+                        <p>Pie</p>
+                    </td>
+                    <td class="analytics-chart-scatter" type="scatter">
+                        <p>Scatter</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
 </div>
-<div class="middle clearfix">
-     <div class="left-category pull-left"></div>
+<script>
+    $(document).ready(function () {
+        init_analytics();
+    });
+    $(window).resize(function () {
+        resize_chart.body();
+        resize_chart.container();
+    });
+</script>
+
+
+
+
+
+
+
+
+
 
      <div class="right-content pull-left" id="right-content">
           <div class="content-condition clearfix">
@@ -62,9 +209,5 @@
           </div>
           <div id="container" class="analyze-chart"></div>
      </div>
-</div>
-<script type="text/javascript">
-     $(document).ready(function() {
-          init_analytics();
-     })
-</script>
+
+
