--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
           <%= csrf_meta_tags %>
      </head>
      <body>
+          <%= render :partial=>'shares/user_aside'%>
           <div class="wrap-page">
                <%= render :partial=>'shares/menu'%>
                <%= yield %>
