--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -1,213 +1,162 @@
 <div>
-        <div class="analytics-condition clearfix" id="analytics-condition">
-            <div class="analytics-mark pull-left">
-                <h2 class="normal-blue text-center pointer" onclick="analytic_control_condition_visible()">
-                    Analytics</h2>
-            </div>
-            <div class="pull-left analytics-condition-choose">
-                <div class="index-condition-group">
+     <div class="analytics-condition clearfix" id="analytics-condition">
+          <div class="analytics-mark pull-left">
+               <h2 class="normal-blue text-center pointer" onclick="analytic_control_condition_visible()"> Analytics</h2>
+          </div>
+          <div class="pull-left analytics-condition-choose">
+               <div class="index-condition-group">
                     <select data-placeholder="Entity *" style="width:90px;" class="chosen-select"
-                            title="analy-entity-select" id="chart-group">
-                        <option value=""></option>
-                        <option value="group1">entity1</option>
-                        <option value="group2">entity2</option>
-                        <option value="group3">entity3</option>
+                    title="analy-entity-select" id="chart-group" onchange="get_kpis_by_category(this);">
+                         <%@categories.each_with_index do |catetory,i|%>
+                         <%if i==0%>
+                         <option value=""></option>
+                         <%end%>
+                         <option value="<%= catetory.id%>"><%= catetory.name%></option>
+                         <%end %>
                     </select>
-                    <select data-placeholder="Kpi *" style="width:150px;" class="chosen-select" title="analy-kpi-select"
-                            id="chart-kpi" date-pick=false>
-                        <option value=""></option>
-                        <option value="kpi1" interval="200" type="">week</option>
-                        <option value="kpi1" interval="90">hour</option>
-                        <option value="kpi1" interval="100">day</option>
-                        <option value="kpi2" interval="400">quarter</option>
-                        <option value="kpi3" interval="300">month</option>
-                        <option value="kpi3" interval="500">year</option>
-                        <option value="kpi3" interval="">empty</option>
+                    <select data-placeholder="Kpi *" style="width:150px;" class="chosen-select" title="analy-kpi-select" id="chart-kpi" date-pick=false>
+                         <option value=""></option>
                     </select>
                     <select data-placeholder="View *" style="width:150px;" class="chosen-select" title="analy-view-select"
-                            id="chart-view">
-                        <option value=""></option>
-                        <option value="entity1">view1</option>
-                        <option value="entity2">view2</option>
-                        <option value="entity3">view3</option>
+                    id="chart-view">
+                         <%@entity_groups.each_with_index do |entity_group,i|%>
+                         <%if i==0%>
+                         <option value=""></option>
+                         <%end%>
+                         <option value="<%= entity_group.id%>" ><%= entity_group.name%></option>
+                         <%end %>
+
                     </select>
-                </div>
-                <div class="index-condition-group">
+               </div>
+               <div class="index-condition-group">
                     <input type="text" class="index-pick-date" placeholder="Begin Time *" id="analy-begin-time"
-                           readonly=true/>
+                    readonly=true/>
                     <label class="index-date-extra-info"></label>
                     <input type="text" class="index-pick-date" placeholder="End Time" id="analy-end-time"
-                           readonly=true/>
+                    readonly=true/>
                     <label class="index-date-extra-info"></label>
-                </div>
-                <div class="index-condition-group" style="width:120px">
+               </div>
+               <div class="index-condition-group" style="width:120px">
                     <label class="radio analy-radio">
-                        <input type="radio" name="chartRadios" value="1" checked>
-                        Summary
-                    </label>
+                         <input type="radio" name="chartRadios" value="1" checked>
+                         Summary </label>
                     <label class="radio analy-radio">
-                        <input type="radio" name="chartRadios" value="2">
-                        Average
-                    </label>
-                </div>
-                <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px" onclick="prepare_form_chart()">add
-                    chart</a>
-            </div>
-            <i class="icon-chevron-up analytic-control-condition-visible" id="analytic-control-condition-visible"
-               open=true onclick="analytic_control_condition_visible()"> </i>
+                         <input type="radio" name="chartRadios" value="2">
+                         Average </label>
+               </div>
+               <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px" onclick="prepare_form_chart()">add
+               chart</a>
+          </div>
+          <i class="icon-chevron-up analytic-control-condition-visible" id="analytic-control-condition-visible"
+          open=true onclick="analytic_control_condition_visible()"> </i>
 
-            <p class="analytics-condition-invisible-mark pointer" id="analytics-condition-invisible-mark"
-               style="display:none" onclick="analytic_control_condition_visible()">Analytics</p>
-        </div>
-        <div class="chart-body" id="chart-body" style="display:none">
-            <div class="clearfix" id="chart-interval-alternate" my_height="28">
-                <ul class="pull-right control-chart-interval-group">
-                    <li interval="90"><a>Hr</a></li>
-                    <li interval="100"><a>D</a></li>
-                    <li interval="200"><a>W</a></li>
-                    <li interval="300"><a>M</a></li>
-                    <li interval="400"><a>Qr</a></li>
-                    <li interval="500"><a>Y</a></li>
-                </ul>
-            </div>
-            <div class="relative" id="chart-main-middle">
-                <div class="chart-container " id="chart-container"></div>
-                <div id="chart-point-detail" class="chart-point-detail">
+          <p class="analytics-condition-invisible-mark pointer" id="analytics-condition-invisible-mark"
+          style="display:none" onclick="analytic_control_condition_visible()">
+               Analytics
+          </p>
+     </div>
+     <div class="chart-body" id="chart-body" style="display:none">
+          <div class="clearfix" id="chart-interval-alternate" my_height="28">
+               <ul class="pull-right control-chart-interval-group">
+                    <li interval="90">
+                         <a>Hr</a>
+                    </li>
+                    <li interval="100">
+                         <a>D</a>
+                    </li>
+                    <li interval="200">
+                         <a>W</a>
+                    </li>
+                    <li interval="300">
+                         <a>M</a>
+                    </li>
+                    <li interval="400">
+                         <a>Qr</a>
+                    </li>
+                    <li interval="500">
+                         <a>Y</a>
+                    </li>
+               </ul>
+          </div>
+          <div class="relative" id="chart-main-middle">
+               <div class="chart-container " id="chart-container"></div>
+               <div id="chart-point-detail" class="chart-point-detail">
                     <table class="chart-detail-table">
-                        <thead>
-                            <tr>
-                                <td colspan="2" align="center" id="chart-detail-kpi" ></td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td width="80px"  align="right">Date:</td>
-                                <td id="chart-detail-date" align="left"></td>
-                            </tr>
-                            <tr class="hide">
-                                <td width="80px"  align="right">To:</td>
-                                <td id="chart-detail-end-date" align="left"></td>
-                            </tr>
-                            <tr class="hide">
-                                <td width="80px"  align="right">Percent:</td>
-                                <td id="chart-detail-percent" align="left"></td>
-                            </tr>
-                            <tr>
-                                <td width="80px"  align="right">Target:</td>
-                                <td id="chart-detail-target" align="left"></td>
-                            </tr>
-                            <tr class="hide">
-                                <td width="80px"  align="right">Aver Target:</td>
-                                <td id="chart-detail-aver-target" align="left"></td>
-                            </tr>
-                            <tr>
-                                <td width="80px"  align="right">Value:</td>
-                                <td id="chart-detail-value" align="left"></td>
-                            </tr>
+                         <thead>
+                              <tr>
+                                   <td colspan="2" align="center" id="chart-detail-kpi" ></td>
+                              </tr>
+                         </thead>
+                         <tbody>
+                              <tr>
+                                   <td width="80px"  align="right">Date:</td>
+                                   <td id="chart-detail-date" align="left"></td>
+                              </tr>
+                              <tr class="hide">
+                                   <td width="80px"  align="right">To:</td>
+                                   <td id="chart-detail-end-date" align="left"></td>
+                              </tr>
+                              <tr class="hide">
+                                   <td width="80px"  align="right">Percent:</td>
+                                   <td id="chart-detail-percent" align="left"></td>
+                              </tr>
+                              <tr>
+                                   <td width="80px"  align="right">Target:</td>
+                                   <td id="chart-detail-target" align="left"></td>
+                              </tr>
+                              <tr class="hide">
+                                   <td width="80px"  align="right">Aver Target:</td>
+                                   <td id="chart-detail-aver-target" align="left"></td>
+                              </tr>
+                              <tr>
+                                   <td width="80px"  align="right">Value:</td>
+                                   <td id="chart-detail-value" align="left"></td>
+                              </tr>
 
-                            <tr class="hide">
-                                <td width="80px"  align="right">Aver Value</td>
-                                <td id="chart-detail-aver-date" align="left"></td>
-                            </tr>
-                            <tr>
-                                <td width="80px"  align="right">TCR:</td>
-                                <td id="chart-detail-tcr" align="left"></td>
-                            </tr>
-                        </tbody>
+                              <tr class="hide">
+                                   <td width="80px"  align="right">Aver Value</td>
+                                   <td id="chart-detail-aver-date" align="left"></td>
+                              </tr>
+                              <tr>
+                                   <td width="80px"  align="right">TCR:</td>
+                                   <td id="chart-detail-tcr" align="left"></td>
+                              </tr>
+                         </tbody>
                     </table>
-                    <div class="chart-detail-close" id="chart-detail-close" onclick="close_chart_detail()">Close</div>
-                </div>
-            </div>
-            <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
-                <tr>
+                    <div class="chart-detail-close" id="chart-detail-close" onclick="close_chart_detail()">
+                         Close
+                    </div>
+               </div>
+          </div>
+          <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
+               <tr>
                     <td class="analytics-chart-line" type="line">
-                        <p style="display:none">Line</p>
-                    </td>
+                    <p style="display:none">
+                         Line
+                    </p></td>
                     <td class="analytics-chart-column" type="column">
-                        <p>Column</p>
-                    </td>
+                    <p>
+                         Column
+                    </p></td>
                     <td class="analytics-chart-pie" type="pie">
-                        <p>Pie</p>
-                    </td>
+                    <p>
+                         Pie
+                    </p></td>
                     <td class="analytics-chart-scatter" type="scatter">
-                        <p>Scatter</p>
-                    </td>
-                </tr>
-            </table>
-        </div>
+                    <p>
+                         Scatter
+                    </p></td>
+               </tr>
+          </table>
+     </div>
 </div>
 <script>
-    $(document).ready(function () {
-        init_analytics();
-    });
-    $(window).resize(function () {
-        resize_chart.body();
-        resize_chart.container();
-    });
+     $(document).ready(function() {
+          init_analytics();
+     });
+     $(window).resize(function() {
+          resize_chart.body();
+          resize_chart.container();
+     }); 
 </script>
-
-
-
-
-
-
-
-
-
-
-     <div class="right-content pull-left" id="right-content">
-          <div class="content-condition clearfix">
-               <div class="content-condition-part content-condition-leftpart pull-left">
-                    <div class="chart-leftMark">
-                         <label>类别</label>
-                         <label>KPI</label>
-                         <label class="chart-leftMark-view">观察点</label>
-                    </div>
-                    <%= select_tag :category_id,options_from_collection_for_select(@categories,'id','name'),
-                    {:id=>'chart-group',:class=>"pull-left conditionPart-group",:onchange=>"kpi_entries_reinit_by_category('chart-group','kpi-select','chart-kpi','pull-left')"}%>
-                    <div id="kpi-select">
-                         <select class="pull-left" id="chart-kpi">
-                              <%@kpis.each do |kpi|%>
-                              <option value="<%= kpi.id%>" interval="<%= kpi.frequency%>"><%= kpi.name%></option>
-                              <%end %>
-                         </select>
-                    </div>
-                    <span class="inline pull-left">-</span>
-
-                    <%= select_tag :entity_group,options_from_collection_for_select(@entity_groups,'id','name'),{:id=>'chart-view',:class=>'pull-left conditionPart-entity'}%>
-
-                    <div class="chart-optionRadio">
-                         <label class="radio ">
-                              <input type="radio" name="chartRadios" checked value="1"/>
-                              以综合值分析 </label>
-                         <label class="radio ">
-                              <input type="radio" name="chartRadios" value="0"/>
-                              以平均值分析 </label>
-                    </div>
-               </div>
-
-               <div class="content-condition-part pull-right content-condition-rightpart">
-                    <p class="text-center">
-                         日期范围
-                    </p>
-                    <input type="text" readonly="true" id="from" />
-                    <input placeholder="时间" type="text" readonly="true" id="fromTime" class="analytics-time"/>
-                    <span>to</span>
-                    <input  type="text" readonly="true" id="to" />
-                    <input placeholder="时间" type="text" readonly="true" id="toTime" class="analytics-time"/>
-               </div>
-               <a class="btn btn-wzx btn-primary pull-right analyze-btn" onclick="init_chart()">分析</a>
-          </div>
-          <p class="text-warning text-center hide" id="chart-chooseWarning"></p>
-          <div class="control-chart">
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn control-chart-btn-last" data-animation=false data-type="500" title="年">Y</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false data-type="400" title="季度">Q</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false data-type="300" title="月">M</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false data-type="200" title="周">W</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false  data-type="100" title="天">D</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false data-type="90" title="小时">H</a>
-          </div>
-          <div id="container" class="analyze-chart"></div>
-     </div>
-
 
