--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -1,51 +1,44 @@
-<div class="page-top">
-     <img src="/assets/headicon.png"/>
-     <label class="company-name">BrillianTech</label>
-     <div class="top-tool pull-right">
-          <a class="tool-setting" data-placement="bottom" data-animation=false id="tool-setting" title="设置" > </a>
-          <a class="tool-help" data-placement="bottom" data-animation=false id="tool-help" title="帮助"> </a>
-          <a class="tool-user" data-placement="bottom" data-animation=false id="tool-user" title="账户" onclick="$('#setting-right').show('2000')"> </a>
+<header>
+     <div class="user-portrait-background pull-left" data-open=true id="user-portrait-background">
+          <div class="user-portrait-brand"></div>
+          <div class="user-portrait-name">
+               IF-EPM
+          </div>
      </div>
-</div>
-<div class="setting-right hide" id="setting-right">
-    <i class="icon-remove pull-left" onclick="$('#setting-right').hide('2000')"></i>
-    <div class="user-info">
-        <p class="font-gray user-name"><%=current_user.first_name%></p>
-        <a class="btn btn-wzx btn-danger btn-logout" href="/user_sessions/destroy">注销</a>
-    </div>
-</div>
-
-<div class="page-navi clearfix">
-     <ul class="main-navi pull-left">
-          <li>
-               <a href="/">开始</a>
-          </li>
-          <li>
-               <a href="<%=dashboards_path%>">仪表盘</a>
-          </li>
-          <li>
-               <a  href="<%=analyse_kpi_entries_path%>">分析</a>
-          </li>
-          <li>
-               <a href="#">报告</a>
-          </li>
-          <li class="dropdown">
-               <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 管理<b class="caret"></b> </a>
-               <ul class="dropdown-menu">
-                    <li>
-                         <a class="main-navi-dropitem" href="<%= kpis_path%>">KPI</a>
-                    </li>
-                    <li>
-                         <a class="main-navi-dropitem" href="<%= users_path%>">用户</a>
-                    </li>
-                    <li>
-                         <a class="main-navi-dropitem" href="<%= entity_groups_path%>">观察点</a>
-                    </li>
-                    <li>
-                         <a class="main-navi-dropitem" href="#">付费</a>
-                    </li>
-               </ul>
-          </li>
-     </ul>
-     <a class="btn btn-success btn-navi pull-right" href="/kpi_entries/new">输入 KPI</a>
-</div>
+     <nav class="pull-left">
+          <ul>
+               <li>
+                    <a href="/"> <span>Get Started</span> <span class="nav-get-started"></span> </a>
+               </li>
+               <li>
+                    <a  href="<%= dashboards_path%>"> <span>DashBoard</span> <span class="nav-dash-board"></span> </a>
+               </li>
+               <li>
+                    <a   href="<%= analyse_kpi_entries_path%>"> <span>Analytics</span> <span class="nav-analytics"></span> </a>
+               </li>
+               <li>
+                    <a> <span>Reports</span> <span class='nav-report'></span> </a>
+               </li>
+               <li class="relative">
+                    <a> <span>Manage</span> <span class='nav-manage'></span> </a>
+                    <ul class="nav-manage-sub">
+                         <li>
+                              <a href="<%= kpis_path%>">KPIs</a>
+                         </li>
+                         <li>
+                              <a  href="<%= users_path%>">Users</a>
+                         </li>
+                         <li>
+                              <a  href="<%= entity_groups_path%>">Views</a>
+                         </li>
+                         <li>
+                              <a>Billings</a>
+                         </li>
+                    </ul>
+               </li>
+               <li>
+                    <a href="<%= new_kpi_entry_path%>"> <span>Entry KPIs</span> <span class="nav-entry-kpi"></span> </a>
+               </li>
+          </ul>
+     </nav>
+</header>
