--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -18,6 +18,9 @@ h2{
     margin:0;
     letter-spacing:1px
 }
+i{
+    pointer-events:none;
+}
 /*************************************************************  input\select format
 *********************************************************************************************************/
 input[type="text"],input[type="password"]{
@@ -41,6 +44,10 @@ input[type="date"]{
 }
 /*************************************************************  basic detail
 *********************************************************************************************************/
+a{
+    text-decoration:none ;
+    color:inherit
+}
 a:hover,a:focus{
     text-decoration:none ;
 }
