--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -80,8 +80,8 @@ header{
     cursor:pointer;
 }
 .user-portrait-brand{
-    /*background:url("/assets/logo.png") no-repeat center bottom;*/
-    background:url("../images/logo.png") no-repeat center bottom;
+    background:url("/assets/logo.png") no-repeat center bottom;
+    /*background:url("../images/logo.png") no-repeat center bottom;*/
     width:150px;
     height:117px;
 }
@@ -127,8 +127,8 @@ nav ul li a span:nth-of-type(2){
     display:block;
     width:100%;
     height:52px;
-    /*background-image:url("/assets/nav-btn.png");*/
-    background-image:url("../images/nav-btn.png");
+    background-image:url("/assets/nav-btn.png");
+    /*background-image:url("../images/nav-btn.png");*/
     background-repeat:no-repeat;
 }
 /********************************************************* get start
